# CF Snippets Changelog

## 3.2
- Updated post snippet management
- Removed "post_parent" snippet association to specific posts

## 3.1.6
- Hotfix to set global $post object, since setup_postdata does not do so.

## 3.1.5
- Hotfix to properly reset all postdata. Removed all calls in snippets class to wp_reset_query.

## 3.1.4
- Hotfix to preserve authordata

## 3.1.3
- Hotfix to address blowing away subqueries through improper wp_reset_query call.

## 3.1.2
- Hotfix to address introduced bug in CF Snippets admin display discovered from changes in 3.1.1

## 3.1.1
- Hotfix to remove custom post loop in admin that is generated by the snippets module for Carrington Build.

## 3.1

- Adding upgrade routine to plugin.  Prompts admins to upgrade by clicking a link in an admin notice.

## 3.0

- Implementing Snippets as a Custom Post Type [_cf_snippet]
- Extracting as much data into views as possible
- Cleanup of CSS/JS
- Cleanup of Old code to lighten load

## 2.1.6

- Adding `esc_textarea` to the Edit box to escape textarea content properly.

## 2.1.5

- Fixing issue with Post Screen Meta Box processing shortcodes instead of displaying them
- Fixing issue with saving of Post Snippets

## 2.1.4

- Fixing issue with Post Screen Meta Box not showing Post Related Snippets

## 2.1.3

- Adding support for cf-revision-manager
- Adding support for housing plugin in theme/plugins folder

## 2.1.2

- Fixing the get_info function, removing do_shortcode running on an array

## 2.1.1

- Fixing some JSON issues for non WP 3.0 and PHP 5.1 servers

## 2.1

- Adding the ability to add Snippets on Post edit screens
- Also adding the display of the Post created snippets to the Snippets settings screen
- Also various bug fixes

## 2.0.4

- Fixing more bugs with is_a

## 2.0.3

- Fixing a bug with is_a when checking the global snippet object

## 2.0.2

- Stripping slashes on display of snippet content to handle old snippet data

## 2.0.1
