@@ -3,6 +3,7 @@
 ## 3.2
 - Updated post snippet management
 - Removed "post_parent" snippet association to specific posts
+- Updated snippets to not store content as meta, now stores as post content.
 
 ## 3.1.6
 - Hotfix to set global $post object, since setup_postdata does not do so.
